--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -4,7 +4,7 @@
 ## 文件保存相关 ##
 
 # 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
-dir=/home/lhw/data/Downloads
+dir=/home/coelacanthus/Downloads
 
 # 启用磁盘缓存, 0为禁用缓存, 需1.16以上版本, 默认:16M
 #disk-cache=32M
@@ -46,17 +46,17 @@ optimize-concurrent-downloads=true
 ## 进度保存相关 ##
 
 # 从会话文件中读取下载任务
-input-file=/home/lhw/.aria2/aria2c.session
+input-file=/home/coelacanthus/.aria2/aria2c.session
 # 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
-save-session=/home/lhw/.aria2/aria2c.session
+save-session=/home/coelacanthus/.aria2/aria2c.session
 # 定时保存会话, 0为退出时才保存, 需1.16.1以上版本, 默认:0
 save-session-interval=60
 
 #Event Hook
 #https://aria2.github.io/manual/en/html/aria2c.html#event-hook
-on-download-start=/home/lhw/.aria2/download-start.sh
-on-download-complete=/home/lhw/.aria2/download-finish.sh
-on-download-error=/home/lhw/.aria2/download-error.sh
+on-download-start=/home/coelacanthus/.aria2/download-start.sh
+on-download-complete=/home/coelacanthus/.aria2/download-finish.sh
+on-download-error=/home/coelacanthus/.aria2/download-error.sh
 
 ## RPC相关设置 ##
 
@@ -92,8 +92,8 @@ bt-max-peers=128
 enable-dht=true
 # 打开IPv6 DHT功能, PT需要禁用
 enable-dht6=true
-dht-file-path=/home/lhw/.aria2/dht.dat
-dht-file-path6=/home/lhw/.aria2/dht6.dat
+dht-file-path=/home/coelacanthus/.aria2/dht.dat
+dht-file-path6=/home/coelacanthus/.aria2/dht6.dat
 # DHT网络监听端口, 默认:6881-6999
 dht-listen-port=6881-6999
 # 本地节点查找, PT需要禁用, 默认:false
