--- a/fcitx5/.config/fcitx5/conf/classicui.conf
+++ b/fcitx5/.config/fcitx5/conf/classicui.conf
@@ -1,7 +1,7 @@
 # 垂直候选列表
 Vertical Candidate List=False
 # 按屏幕 DPI 使用
-PerScreenDPI=True
+PerScreenDPI=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # Font
