--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-	email = liuhongwu2003@outlook.com
+	email = coelacanthus@outlook.com
 	name = Coelacanthus
 	signingkey = 5406F0E8844366FDD637A327D2AC54B70C894FEC
 	
