--- a/fcitx5/.config/fcitx5/conf/punctuation.conf
+++ b/fcitx5/.config/fcitx5/conf/punctuation.conf
@@ -1,5 +1,7 @@
-# Half width punctuation after latin letter or number
+# 字母或者数字之后输入半角标点
 HalfWidthPuncAfterLetterOrNumber=True
+# 同时输入成对标点 (例如引号)
+TypePairedPunctuationsTogether=False
 # Enabled
 Enabled=True
 
