--- a/pacman-backup/etc/pacman.conf
+++ b/pacman-backup/etc/pacman.conf
@@ -69,6 +69,9 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+#[kde-unstable]
+#Include = /etc/pacman.d/mirrorlist
+
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
@@ -127,7 +130,10 @@ Include = /etc/pacman.d/blackarch-mirrorlist
 #Server = https://repo.origincode.me/repo/$arch
 #Server = https://build.archlinuxcn.org/~origincode/repo/$arch
 
-#[foi]
-#SigLevel = Never
-#Server = file:///home/lhw/data/foi/repo/$arch
-#Server = https://cdn.jsdelivr.net/gh/Feicheng-OI/repo@master/repo/$arch
+# Qt With Debug Symbol
+#[qt-debug]
+#Server = https://qutebrowser.org/qt-debug/$arch
+
+# Python Version
+#[python]
+#Server = https://ffy00.github.io/arch-python-repo/
