feat(makepkg): using user config instead of system config

--- a/pacman-backup/etc/pacman.conf
+++ b/pacman-backup/etc/pacman.conf
@@ -35,6 +35,7 @@ Color
 CheckSpace
 VerbosePkgLists
 ILoveCandy
+#ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -114,9 +115,9 @@ Server = https://mirrors.bfsu.edu.cn/repo-ck/$arch
 Server = https://mirrors.tuna.tsinghua.edu.cn/arch4edu/$arch
 Server = https://mirrors.bfsu.edu.cn/arch4edu/$arch
 
-[blackarch]
-SigLevel = DatabaseNever TrustAll
-Include = /etc/pacman.d/blackarch-mirrorlist
+#[blackarch]
+#SigLevel = DatabaseNever TrustAll
+#Include = /etc/pacman.d/blackarch-mirrorlist
 
 #[chaotic-aur]
 #Server = http://lonewolf-builder.duckdns.org/$repo/x86_64
