--- a/pacman/.config/pacman/makepkg.conf
+++ b/pacman/.config/pacman/makepkg.conf
@@ -42,7 +42,7 @@ CFLAGS="-march=native -O2 -pipe -fno-plt"
 #CXXFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt"
 CXXFLAGS="-march=native -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
-#RUSTFLAGS="-C opt-level=2"
+RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j10"
 #-- Debugging flags
@@ -92,7 +92,7 @@ BUILDDIR=/tmp/makepkg
 OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge !debug)
 
 #-- File integrity checks to use. Valid: md5, sha1, sha224, sha256, sha384, sha512, b2
-INTEGRITY_CHECK=(sha512)
+INTEGRITY_CHECK=(b2)
 #-- Options to be used when stripping binaries. See `man strip' for details.
 STRIP_BINARIES="--strip-all"
 #-- Options to be used when stripping shared libraries. See `man strip' for details.
@@ -123,7 +123,7 @@ DBGSRCDIR="/usr/src/debug"
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-#PACKAGER="John Doe <john@doe.com>"
+PACKAGER="Coelacanthus <coelacanthus@outlook.com>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
@@ -146,4 +146,4 @@ COMPRESSLZ=(lzip -c -f --threads=0)
 #########################################################################
 #
 PKGEXT='.pkg.tar.zst'
-SRCEXT='.src.tar.gz'
+SRCEXT='.src.tar.zst'
