update(gpg): gitignore

--- a/gpg/.gnupg/dirmngr.conf
+++ b/gpg/.gnupg/dirmngr.conf
@@ -1,1 +1,3 @@
+keyserver hkp://pool.sks-keyservers.net
+keyserver https://keys.openpgp.org
 hkp-cacert /home/coelacanthus/.gnupg/sks-keyservers.netCA.pem
