feat(makepkg): using GPG sign

--- a/pacman/.config/pacman/makepkg.conf
+++ b/pacman/.config/pacman/makepkg.conf
@@ -125,7 +125,7 @@ DBGSRCDIR="/usr/src/debug"
 #-- Packager: name/email of the person or organization building packages
 PACKAGER="Coelacanthus <coelacanthus@outlook.com>"
 #-- Specify a key to use for package signing
-#GPGKEY=""
+GPGKEY="1F62B42D0D2AE4B6"
 
 #########################################################################
 # COMPRESSION DEFAULTS
