--- a/weechat/.weechat/plugins.conf
+++ b/weechat/.weechat/plugins.conf
@@ -10,5 +10,12 @@
 #
 
 [var]
+python.bot2human.bot_nicks = "tg2arch"
+python.bot2human.nick_content_re.0 = "\[(?:\x03[0-9,]+)?(?P<nick>[^:]+?)\x0f?\] (?P<text>.*)"
+python.bot2human.nick_content_re.1 = "(?:\x03[0-9,]+)?\[(?P<nick>[^:]+?)\]\x0f? (?P<text>.*)"
+python.bot2human.nick_content_re.2 = "\((?P<nick>[^:]+?)\) (?P<text>.*)"
+python.bot2human.nick_content_re.3 = "<(?:\x03[0-9,]+)?(?P<nick>[^:]+?)\x0f?> (?P<text>.*)"
+python.bot2human.nick_re_count = "4"
+python.bot2human.znc_ts_re = "\[\d\d:\d\d:\d\d\]\s+"
 
 [desc]
