feat(gpg): set `default-key`

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,2 +1,5 @@
-#keyserver hkps://keys.openpgp.org
+###+++--- GPGConf ---+++###
+utf8-strings
+keyserver hkps://keys.openpgp.org
 keyserver hkps://hkps.pool.sks-keyservers.net
+default-key 1F62B42D0D2AE4B6
