--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -2,4 +2,5 @@
 utf8-strings
 keyserver hkps://keys.openpgp.org
 keyserver hkps://hkps.pool.sks-keyservers.net
+keyserver hkps://keyserver.ubuntu.com
 default-key 1F62B42D0D2AE4B6
