update(ipfs): update systemd unit
[1]: https://wiki.archlinux.org/index.php/IPFS#Using_a_service_to_start_the_daemon

--- a/systemd/.config/systemd/user/ipfs.service
+++ b/systemd/.config/systemd/user/ipfs.service
@@ -3,7 +3,7 @@ Description=IPFS daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/ipfs daemon
+ExecStart=/usr/bin/ipfs daemon --migrate
 Restart=on-failure
 
 [Install]
