update(fcitx5): upstream option update

--- a/fcitx5/.config/fcitx5/conf/classicui.conf
+++ b/fcitx5/.config/fcitx5/conf/classicui.conf
@@ -4,8 +4,12 @@ Vertical Candidate List=False
 PerScreenDPI=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
-# Font
+# 字体
 Font="Sans Serif 11"
+# 菜单字体
+MenuFont="Sans 10"
+# 使用输入法的语言来显示文字
+UseInputMethodLangaugeToDisplayText=True
 # 主题
 Theme=Material-Color-Blue
 
