feat(weechat): enable autoconnet to freenode and autojoin
autojoin to #archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#debian-cn,#gentoo-cn,#opensuse-cn

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -176,7 +176,7 @@ freenode.sasl_password = "${sec.data.freenode_password}"
 freenode.sasl_key
 freenode.sasl_timeout
 freenode.sasl_fail
-freenode.autoconnect
+freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks = "CoelacanthusHex,Coelacanthus,CoelacanthusHEX,C10sHex"
@@ -187,7 +187,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin
+freenode.autojoin = "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#debian-cn,#gentoo-cn,#opensuse-cn"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
