refactor(newsboat): gitignore: remove `cache.db`
it is split into `$XDG_DATA_HOME/newsboat/cache.db`
with `history.search`, `history.cmdline` and `queue` together
when follow XDG Base Directory Specification

[1]: https://newsboat.org/releases/2.22.1/docs/newsboat.html#_files

--- a/newsboat/.config/newsboat/.gitignore
+++ b/newsboat/.config/newsboat/.gitignore
@@ -1,1 +1,6 @@
-cache.db
+# Move to `$XDG_DATA_HOME/newsboat/`
+# https://newsboat.org/releases/2.22.1/docs/newsboat.html#_files
+#cache.db
+#history.search
+#history.cmdline
+#queue
