feat(env): enable XAUTHORITY

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -45,4 +45,4 @@ BUNDLE_USER_PLUGIN="$XDG_DATA_HOME"/bundle
 CCACHE_CONFIGPATH="$XDG_CONFIG_HOME"/ccache.conf
 CCACHE_DIR="$XDG_CACHE_HOME"/ccache
 # Xauthority
-#XAUTHORITY="$XDG_RUNTIME_DIR"/Xauthority
+XAUTHORITY="$XDG_RUNTIME_DIR"/Xauthority
