--- a/pacman/.config/pacman/makepkg.conf
+++ b/pacman/.config/pacman/makepkg.conf
@@ -42,7 +42,7 @@ CFLAGS="-march=native -O2 -pipe -fno-plt"
 #CXXFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt"
 CXXFLAGS="-march=native -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
-RUSTFLAGS="-C opt-level=2"
+#RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j10"
 #-- Debugging flags
