--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -177,7 +177,7 @@ freenode.sasl_password = "${sec.data.freenode_password}"
 freenode.sasl_key
 freenode.sasl_timeout
 freenode.sasl_fail
-freenode.autoconnect = on
+freenode.autoconnect = off
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks = "CoelacanthusHex,Coelacanthus,CoelacanthusHEX,C10sHex"
@@ -203,3 +203,47 @@ freenode.notify
 freenode.split_msg_max_length
 freenode.charset_message
 freenode.default_chantypes
+libera.addresses = "irc.libera.chat/7000"
+libera.proxy
+libera.ipv6
+libera.ssl = on
+libera.ssl_cert
+libera.ssl_password
+libera.ssl_priorities
+libera.ssl_dhkey_size
+libera.ssl_fingerprint
+libera.ssl_verify
+libera.password
+libera.capabilities
+libera.sasl_mechanism
+libera.sasl_username = "CoelacanthusHex"
+libera.sasl_password = "${sec.data.libera_password}"
+libera.sasl_key
+libera.sasl_timeout
+libera.sasl_fail
+libera.autoconnect = on
+libera.autoreconnect
+libera.autoreconnect_delay
+libera.nicks = "CoelacanthusHex,Coelacanthus,C10s,C10sHex"
+libera.nicks_alternate
+libera.username
+libera.realname
+libera.local_hostname
+libera.usermode
+libera.command
+libera.command_delay
+libera.autojoin = "= "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh""
+libera.autorejoin
+libera.autorejoin_delay
+libera.connection_timeout
+libera.anti_flood_prio_high
+libera.anti_flood_prio_low
+libera.away_check
+libera.away_check_max_nicks
+libera.msg_kick
+libera.msg_part
+libera.msg_quit
+libera.notify
+libera.split_msg_max_length
+libera.charset_message
+libera.default_chantypes
