change(git): using new email

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-	email = coelacanthus@outlook.com
+	email = CoelacanthusHex@gmail.com
 	name = Coelacanthus
 	signingkey = 1F62B42D0D2AE4B6
 
