--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -12,3 +12,25 @@ Host github.com
   ProxyCommand nc -x localhost:1089 %h %p
   # http proxy
   #ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
+
+Host texlive
+  User coelacanthus
+  Hostname 42.193.189.62
+  Port 9233
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/texlive
+  ControlMaster auto
+  ControlPath ~/.ssh/socket-texlive-%C
+  ControlPersist yes
+  ServerAliveInterval 10
+
+Host junyan
+  User coelacanthus
+  Hostname ll.stdssr.com
+  Port 21379
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/id_ed25519_junyan
+  ControlMaster auto
+  ControlPath ~/.ssh/socket-junyan-%C
+  ControlPersist yes
+  ServerAliveInterval 10
