--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,6 +1,5 @@
 ###+++--- GPGConf ---+++###
 utf8-strings
-keyserver hkps://keys.openpgp.org
-keyserver hkps://hkps.pool.sks-keyservers.net
-keyserver hkps://keyserver.ubuntu.com
 default-key 1F62B42D0D2AE4B6
+keyserver hkps://keys.openpgp.org
+###+++--- GPGConf ---+++### Sat 05 Jun 2021 21:11:28 CST
