--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -232,7 +232,7 @@ libera.local_hostname
 libera.usermode
 libera.command
 libera.command_delay
-libera.autojoin = "= "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh""
+libera.autojoin = "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,##foi"
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
