--- a/weechat/.weechat/relay.conf
+++ b/weechat/.weechat/relay.conf
@@ -34,7 +34,7 @@ compression_level = 6
 ipv6 = on
 max_clients = 5
 nonce_size = 16
-password = ""
+password = "relay"
 password_hash_algo = "*"
 password_hash_iterations = 100000
 ssl_cert_key = "%h/ssl/relay.pem"
@@ -55,5 +55,6 @@ backlog_time_format = "[%H:%M] "
 commands = ""
 
 [port]
+weechat = 9000
 
 [path]
