feat(gpg): using hardened algorithm
https://wiki.archlinux.org/title/GnuPG#Different_algorithm

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -2,4 +2,10 @@
 utf8-strings
 default-key 382992CA62C08283
 keyserver hkps://keys.openpgp.org
+
+# https://wiki.archlinux.org/title/GnuPG#Different_algorithm
+personal-digest-preferences SHA512
+cert-digest-algo SHA512
+default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
 ###+++--- GPGConf ---+++### Sat 05 Jun 2021 21:11:28 CST
