--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -8,4 +8,8 @@ personal-digest-preferences SHA512
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
+
+# https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
+keyid-format 0xlong
+with-fingerprint
 ###+++--- GPGConf ---+++### Sat 05 Jun 2021 21:11:28 CST
