refactor(zsh/prompt): using `@` instead of `in`

--- a/zsh/.config/starship.toml
+++ b/zsh/.config/starship.toml
@@ -70,9 +70,11 @@ disabled = false
 
 [username]
 show_always = true
+format = "[$user]($style) "
 
 [hostname]
 ssh_only = false
+format = "@ [$hostname]($style) in "
 
 
 [character]
