--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fcitx5/.local/share/fcitx5/themes/fcitx5-dark-transparent"]
 	path = fcitx5/.local/share/fcitx5/themes/fcitx5-dark-transparent
 	url = https://github.com/hosxy/fcitx5-dark-transparent.git
+[submodule "muttrc"]
+	path = mutt
+	url = git@github.com:CoelacanthusHex/muttrc.git
