refactor(ssh): make gpg-agent ask for passphrase from same terminal where ssh command was run
https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,12 +1,15 @@
 # Keep Alive
 ServerAliveInterval 120
 
+# https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
+Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
+
 Host aur aur.archlinux.org
   IdentityFile ~/.ssh/aur
   Hostname aur.archlinux.org
   User aur
 
-Host github.com                                                                                                             
+Host github.com
   User git
   # socks5 proxy
   ProxyCommand nc -x localhost:1089 %h %p
@@ -17,20 +20,9 @@ Host texlive
   User coelacanthus
   Hostname 42.193.189.62
   Port 9233
-  IdentitiesOnly yes
-  IdentityFile ~/.ssh/texlive
+  #IdentitiesOnly yes
+  #IdentityFile ~/.ssh/texlive
   ControlMaster auto
   ControlPath ~/.ssh/socket-texlive-%C
-  ControlPersist yes
-  ServerAliveInterval 10
-
-Host junyan
-  User coelacanthus
-  Hostname ll.stdssr.com
-  Port 21379
-  IdentitiesOnly yes
-  IdentityFile ~/.ssh/id_ed25519_junyan
-  ControlMaster auto
-  ControlPath ~/.ssh/socket-junyan-%C
   ControlPersist yes
   ServerAliveInterval 10
