--- a/cargo/.local/share/cargo/config
+++ b/cargo/.local/share/cargo/config
@@ -5,5 +5,11 @@ replace-with = 'ustc'
 [source.ustc]
 registry = "git://mirrors.ustc.edu.cn/crates.io-index"
 
+[source.tuna]
+registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
+
+[source.sjtu]
+registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"
+
 #[build]
 #rustc-wrapper = "/usr/bin/sccache"
