--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -8,6 +8,9 @@ KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-grou
 MACs hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,umac-128-etm@openssh.com
 HostKeyAlgorithms ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-256,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-512-cert-v01@openssh.com
 
+ControlMaster auto
+ControlPath ~/.ssh/socket/%h-%p-%r
+ControlPersist yes
 
 # Keep Alive
 ServerAliveInterval 120
@@ -31,9 +34,3 @@ Host texlive
   User coelacanthus
   Hostname 42.193.189.62
   Port 9233
-  #IdentitiesOnly yes
-  #IdentityFile ~/.ssh/texlive
-  ControlMaster auto
-  ControlPath ~/.ssh/socket-texlive-%C
-  ControlPersist yes
-  ServerAliveInterval 10
