style(ssh): format

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,18 +19,27 @@ ServerAliveInterval 120
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
 
 Host aur aur.archlinux.org
-  IdentityFile ~/.ssh/aur
-  Hostname aur.archlinux.org
-  User aur
+	IdentityFile ~/.ssh/aur
+	Hostname aur.archlinux.org
+	User aur
 
 Host github.com
-  User git
-  # socks5 proxy
-  ProxyCommand nc -x localhost:1089 %h %p
-  # http proxy
-  #ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
+	User git
+	# socks5 proxy
+	ProxyCommand nc -x localhost:1089 %h %p
+	# http proxy
+	#ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
 
 Host texlive
-  User coelacanthus
-  Hostname 42.193.189.62
-  Port 9233
+	User coelacanthus
+	Hostname 42.193.189.62
+	Port 9233
+
+Host t610
+	User coelacanthus
+	Hostname 10.0.0.6
+	Port 22
+	StreamLocalBindUnlink yes
+	RemoteForward /home/coelacanthus/.gnupg/S.gpg-agent:/run/user/1000/gnupg/S.gpg-agent.extra
+
+# vim: ts=4
