--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -62,10 +62,10 @@
  <!-- 默认无衬线字体 -->
  <!-- Default sans-serif font -->
  <match target="pattern">
-  <test name="family" qual="any">
+  <test qual="any" name="family">
    <string>sans-serif</string>
   </test>
-  <edit mode="prepend" name="family" binding="same">
+  <edit binding="same" mode="prepend" name="family">
    <string>Noto Sans CJK SC</string>
    <string>Noto Sans CJK TC</string>
    <string>Noto Sans CJK JP</string>
@@ -83,10 +83,10 @@
  <!-- 默认衬线字体 -->
  <!-- Default serif fonts -->
  <match target="pattern">
-  <test name="family" qual="any">
+  <test qual="any" name="family">
    <string>serif</string>
   </test>
-  <edit mode="prepend" name="family" binding="same">
+  <edit binding="same" mode="prepend" name="family">
    <string>Noto Serif CJK SC</string>
    <string>Noto Serif CJK TC</string>
    <string>Noto Serif CJK JP</string>
@@ -104,10 +104,10 @@
  <!-- 默认等宽字体 -->
  <!-- Default monospace fonts -->
  <match target="pattern">
-  <test name="family" qual="any">
+  <test qual="any" name="family">
    <string>monospace</string>
   </test>
-  <edit mode="prepend" name="family" binding="same">
+  <edit binding="same" mode="prepend" name="family">
    <!--string>Sarasa Term Slab SC</string-->
    <string>Fira Code</string>
    <string>FiraCode Nerd Font</string>
@@ -125,10 +125,10 @@
   </edit>
  </match>
  <match target="pattern">
-  <test name="family" qual="any">
+  <test qual="any" name="family">
    <string>Monospace</string>
   </test>
-  <edit mode="prepend" name="family" binding="same">
+  <edit binding="same" mode="prepend" name="family">
    <!--string>Sarasa Term Slab SC</string-->
    <string>Fira Code</string>
    <string>FiraCode Nerd Font</string>
@@ -146,10 +146,10 @@
   </edit>
  </match>
  <match target="pattern">
-  <test name="family" qual="any">
+  <test qual="any" name="family">
    <string>emoji</string>
   </test>
-  <edit mode="assign" name="family" binding="same">
+  <edit binding="same" mode="assign" name="family">
    <string>Twemoji</string>
    <string>JoyPixels</string>
    <string>Noto Color Emoji</string>
