--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      monospace
+font_family      Sarasa Mono SC
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -174,7 +174,7 @@ cursor_text_color #111111
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-cursor_shape block
+cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
