--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -30,7 +30,7 @@ Host github.com
 	# http proxy
 	#ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
 
-Host texlive
+Host ssr-tencent
 	User coelacanthus
 	Hostname 42.193.189.62
 	Port 9233
