feat: add bytetools
https://github.com/zqxyz73/bytetools
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "muttrc"]
 	path = mutt
 	url = git@github.com:CoelacanthusHex/muttrc.git
+[submodule "bytetools/.local/bin/bytetools"]
+	path = bytetools/.local/bin/bytetools
+	url = git@github.com:CoelacanthusHex/bytetools.git
