refactor(gpg): set algo cupher
https://futureboy.us/pgp.html#StrongerAlgorithms

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -4,12 +4,12 @@ default-key E35C89E45867AE35
 keyserver hkps://keys.openpgp.org
 
 # https://wiki.archlinux.org/title/GnuPG#Different_algorithm
-personal-digest-preferences SHA512
+# https://futureboy.us/pgp.html#StrongerAlgorithms
+personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
+personal-cipher-preferences TWOFISH AES256 CAMELLIA256 AES192 CAMELLIA192 AES CAMELLIA128 CAST5 3DES
 
 # https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
 keyid-format 0xlong
 with-fingerprint
-###+++--- GPGConf ---+++### Sat 05 Jun 2021 21:11:28 CST
