refactor(gpg): harden configuration
[1]: https://www.yhi.moe/blog/en/my-gpg-configuration

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -12,4 +12,19 @@ personal-cipher-preferences TWOFISH AES256 CAMELLIA256 AES192 CAMELLIA192 AES CA
 
 # https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
 keyid-format 0xlong
+
+# https://www.yhi.moe/blog/en/my-gpg-configuration
+# Ask trust level during signing
+ask-cert-level
+
+# This make GPG run only in a secure memory environment.
+# GPG will alert you when it is in an “insecure” environment.
+# Usually when running in a not-lockable memory or a flash
+# memory disk you will receive such message, but GPG will not terminate operations.
+# This option causes GPG refuse to proceed in this situation.
+require-secmem
+
+# Print fingerprint on master key and subkeys
 with-fingerprint
+with-subkey-fingerprint
+
