refactor(gpg): harden configuration
[1]: https://gnupg.org/faq/gnupg-faq.html#new_user_gpg_conf

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -5,10 +5,14 @@ keyserver hkps://keys.openpgp.org
 
 # https://wiki.archlinux.org/title/GnuPG#Different_algorithm
 # https://futureboy.us/pgp.html#StrongerAlgorithms
+# https://gnupg.org/faq/gnupg-faq.html#new_user_gpg_conf
+# https://en.wikipedia.org/wiki/Twofish
+# https://en.wikipedia.org/wiki/Camellia_(cipher)
+# https://en.wikipedia.org/wiki/Advanced_Encryption_Standard
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-personal-cipher-preferences TWOFISH AES256 CAMELLIA256 AES192 CAMELLIA192 AES CAMELLIA128 CAST5 3DES
+personal-cipher-preferences CAMELLIA256 TWOFISH AES256 CAMELLIA192 AES192 CAMELLIA128 AES BLOWFISH CAST5 3DES
 
 # https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
 keyid-format 0xlong
