ssh: update server config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -30,16 +30,14 @@ Host github.com
 	# http proxy
 	#ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
 
-Host ssr-tencent
+Host shanghai
 	User coelacanthus
-	Hostname 42.193.189.62
+	Hostname sh.ts.shabiwangyou.com
 	Port 9233
 
-Host t610
+Host guangzhou
 	User coelacanthus
-	Hostname 10.0.0.6
-	Port 22
-	StreamLocalBindUnlink yes
-	RemoteForward /home/coelacanthus/.gnupg/S.gpg-agent:/run/user/1000/gnupg/S.gpg-agent.extra
+	Hostname gz.ts.shabiwangyou.com
+	Port 9233
 
 # vim: ts=4
