--- a/sysctl/99-sysctl.conf
+++ b/sysctl/99-sysctl.conf
@@ -132,12 +132,16 @@ net.core.rmem_default = 8388608
 net.core.wmem_default = 8388608
 net.core.optmem_max = 65536
 
-# increase the maximum connections
-net.core.somaxconn = 8192
+# queue disciplines
+# available: pfifo_fast(default) fq codel fq_codel cake(4.19)
+# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_congestion_control
+net.core.default_qdisc = cake
 
 ########## IPv4 Networking ##########
 
 # enable BBR congestion control
+# available: reno cubic bbr
+# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netcoredefault_qdisc
 net.ipv4.tcp_congestion_control = bbr
 
 # disallow IPv4 packet forwarding
@@ -206,7 +210,9 @@ net.ipv4.tcp_rfc1337 = 1
 
 # disable TCP window scaling
 # this makes the host less susceptible to TCP RST DoS attacks
-net.ipv4.tcp_window_scaling = 0
+# but we open it now
+# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_window_scaling
+net.ipv4.tcp_window_scaling = 1
 
 # increase system IP port limits
 net.ipv4.ip_local_port_range = 1024 65535
@@ -240,8 +246,8 @@ net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_base_mss = 1024
 
 # increase memory thresholds to prevent packet dropping
-net.ipv4.tcp_rmem = 4096 87380 16777216
-net.ipv4.tcp_wmem = 4096 87380 16777216
+net.ipv4.tcp_rmem = 16384 262144 8388608
+net.ipv4.tcp_wmem = 32768 524288 16777216
 
 ########## IPv6 Networking ##########
 
