--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -12,9 +12,9 @@
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	editor = vim
 
+# Color Setting
 [color]
 	ui = true
-
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
@@ -27,12 +27,22 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
-[http]
+
+# Proxy setting
+[http "https://github.com"]
 	proxy = socks5://127.0.0.1:1089
-[https]
+[https "https://github.com"]
 	proxy = socks5://127.0.0.1:1089
+
 [commit]
 	gpgsign = true
+
+# https://lwn.net/Articles/835985/rss
+# https://people.kernel.org/monsieuricon/signed-git-pushes
+[push]
+	gpgSign = if-asked
+
+
 [init]
 	defaultBranch = master
 
