sysctl: change TCP congestion algorithm to cubic

--- a/sysctl/99-sysctl.conf
+++ b/sysctl/99-sysctl.conf
@@ -134,15 +134,22 @@ net.core.optmem_max = 65536
 
 # queue disciplines
 # available: pfifo_fast(default) fq codel fq_codel cake(4.19)
-# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_congestion_control
+# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netcoredefault_qdisc
 net.core.default_qdisc = cake
 
 ########## IPv4 Networking ##########
 
-# enable BBR congestion control
-# available: reno cubic bbr
-# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netcoredefault_qdisc
-net.ipv4.tcp_congestion_control = bbr
+# TCP Congestion Control Algorithm
+# available: reno cubic bbr bbr2 hybla highspeed htcp veno westwood vegas
+# cubic is default algorithm on Linux since 2.6.19
+# westwood is suitable for wireless networks but cannot distinguish between network congestion and wireless jitter, and has low universality
+# https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4tcp_congestion_control
+# https://aws.amazon.com/cn/blogs/china/talking-about-network-optimization-from-the-flow-control-algorithm/
+# https://toonk.io/tcp-bbr-exploring-tcp-congestion-control/index.html
+# https://dropbox.tech/infrastructure/evaluating-bbrv2-on-the-dropbox-edge-network
+# https://blog.csdn.net/dog250/article/details/120336563
+# https://blog.csdn.net/dog250/article/details/113803334
+net.ipv4.tcp_congestion_control = cubic
 
 # disallow IPv4 packet forwarding
 net.ipv4.ip_forward = 1
