ssh: using pubkey

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -34,10 +34,18 @@ Host shanghai
 	User coelacanthus
 	Hostname sh.ts.shabiwangyou.com
 	Port 9233
+	IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+	IdentitiesOnly yes
+	PasswordAuthentication no
+	PubkeyAuthentication yes
 
 Host guangzhou
 	User coelacanthus
 	Hostname gz.ts.shabiwangyou.com
 	Port 9233
+	IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+	IdentitiesOnly yes
+	PasswordAuthentication no
+	PubkeyAuthentication yes
 
 # vim: ts=4
