gpg: set trust-model to tofu+pgp

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -32,3 +32,5 @@ require-secmem
 with-fingerprint
 with-subkey-fingerprint
 
+# https://www.kernel.org/doc/html/v5.15/process/maintainer-pgp-guide.html#web-of-trust-wot-vs-trust-on-first-use-tofu
+trust-model tofu+pgp
