gpg: move keyserver config from gpg.conf to dirmngr.conf

--- a/gpg/.gnupg/dirmngr.conf
+++ b/gpg/.gnupg/dirmngr.conf
@@ -1,11 +1,3 @@
-# GPGConf disabled this option here at Sat 05 Jun 2021 21:04:38 CST
-# keyserver hkp://pool.sks-keyservers.net
-# GPGConf disabled this option here at Sat 05 Jun 2021 21:04:38 CST
-# keyserver https://keys.openpgp.org
-
-###+++--- GPGConf ---+++###
 keyserver hkps://keys.openpgp.org
-###+++--- GPGConf ---+++### Sat 05 Jun 2021 21:11:28 CST
-# GPGConf edited this configuration file.
-# It will disable options before this marked block, but it will
-# never change anything below these lines.
+#keyserver hkps://keyserver.ubuntu.com
+honor-http-proxy
