ssh: optimize proxy config
using Socks5
let netcat only create connect and pass connect to ssh, ssh will close connect later

[1]: https://t.me/archlinuxcn_group/2146258
[2]: https://man.openbsd.org/nc.1

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -25,8 +25,9 @@ Host aur aur.archlinux.org
 
 Host github.com
 	User git
+	ProxyUseFdpass yes
 	# socks5 proxy
-	ProxyCommand nc -x localhost:1089 %h %p
+	ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
 	# http proxy
 	#ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
 
