--- a/envvars/.config/environment.d/10-editor.conf
+++ b/envvars/.config/environment.d/10-editor.conf
@@ -1,4 +1,5 @@
 # Use nvim as default text editor
 # (https://wiki.archlinux.org/index.php/Nano#Replacing_vi_with_nano)
 EDITOR=vim
+SYSTEMD_EDITOR=vim
 VISUAL=vim
