git: set date format to iso8601

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -55,3 +55,7 @@
 	insteadOf = git://aur.archlinux.org/
 [diff "word"]
 	textconv = docx2txt-git-diff
+[log]
+	date = iso-local
+[format]
+	pretty = fuller
