gpg: using pinentry-curse instead of pe-qt
because I no longer use kmail

--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
-pinentry-program /usr/bin/pinentry-qt
+pinentry-program /usr/bin/pinentry-curse
 enable-ssh-support
 # Select the digest algorithm used to compute ssh fingerprints that are communicated to the user, e.g. in pinentry dialogs. OpenSSH has transitioned from using MD5 to the more secure SHA256.
 ssh-fingerprint-digest SHA256
