--- a/envvars/.config/environment.d/60-theme.conf
+++ b/envvars/.config/environment.d/60-theme.conf
@@ -7,7 +7,8 @@
 # and install xdg-desktop-portal and xdg-desktop-portal-kde
 # https://t.me/ArchlinuxCN_Appearance/6955
 # https://www.reddit.com/r/kde/comments/kzjo9d/add_gtk_use_portal1_to_your_firefox_shortcut_to/gjoqtvj/
-#GTK_USE_PORTAL=1
+# https://wiki.archlinux.org/title/Uniform_look_for_Qt_and_GTK_applications#Consistent_file_dialog
+GTK_USE_PORTAL=1
 
 # https://wiki.archlinux.org/index.php/LibreOffice#Theme
 # https://github.com/LibreOffice/core/blob/master/vcl/README#L35
