wget: set config location and hsts file location

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -29,6 +29,8 @@ PYTHONSTARTUP=$XDG_CONFIG_HOME/python/rc.py
 PYTHON_EGG_CACHE="$XDG_CACHE_HOME"/python-eggs
 # Pylint
 PYLINTHOME="$XDG_CACHE_HOME"/pylint
+# Wget
+WGETRC="$XDG_CONFIG_HOME"/wget/config.ini
 # NPM
 NPM_CONFIG_USERCONFIG="$XDG_CONFIG_HOME"/npm/npmrc
 # Rustup (Rust)
