zsh,ssh: format

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,34 +19,34 @@ ServerAliveInterval 120
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
 
 Host aur aur.archlinux.org
-	IdentityFile ~/.ssh/aur
-	Hostname aur.archlinux.org
-	User aur
+    IdentityFile ~/.ssh/aur
+    Hostname aur.archlinux.org
+    User aur
 
 Host github.com
-	User git
-	ProxyUseFdpass yes
-	# socks5 proxy
-	ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
-	# http proxy
-	#ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
+    User git
+    ProxyUseFdpass yes
+    # socks5 proxy
+    ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
+    # http proxy
+    #ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
 
 Host shanghai
-	User coelacanthus
-	Hostname sh.ts.shabiwangyou.com
-	Port 9233
-	IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-	IdentitiesOnly yes
-	PasswordAuthentication no
-	PubkeyAuthentication yes
+    User coelacanthus
+    Hostname sh.ts.shabiwangyou.com
+    Port 9233
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    IdentitiesOnly yes
+    PasswordAuthentication no
+    PubkeyAuthentication yes
 
 Host guangzhou
-	User coelacanthus
-	Hostname gz.ts.shabiwangyou.com
-	Port 9233
-	IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
-	IdentitiesOnly yes
-	PasswordAuthentication no
-	PubkeyAuthentication yes
+    User coelacanthus
+    Hostname gz.ts.shabiwangyou.com
+    Port 9233
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    IdentitiesOnly yes
+    PasswordAuthentication no
+    PubkeyAuthentication yes
 
-# vim: ts=4
+# vim: sts=4 et
