weechat: remove freenode and add libera.chat#asoc

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -19,10 +19,12 @@ color_nicks_in_nicklist = off
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 ctcp_time_format = "%a, %d %b %Y %T %z"
+display_account_message = on
 display_away = local
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
+display_extended_join = on
 display_host_join = on
 display_host_join_local = on
 display_host_quit = on
@@ -68,6 +70,8 @@ smart_filter_nick = on
 smart_filter_quit = on
 temporary_servers = off
 topic_strip_colors = off
+typing_status_nicks = off
+typing_status_self = off
 
 [color]
 input_nick = lightcyan
@@ -162,50 +166,6 @@ usermode = ""
 username = "coelacanthus"
 
 [server]
-freenode.addresses = "chat.freenode.net/7000"
-freenode.proxy
-freenode.ipv6
-freenode.ssl = on
-freenode.ssl_cert
-freenode.ssl_password
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify
-freenode.password
-freenode.capabilities
-freenode.sasl_mechanism
-freenode.sasl_username = "CoelacanthusHex"
-freenode.sasl_password = "${sec.data.freenode_password}"
-freenode.sasl_key
-freenode.sasl_timeout
-freenode.sasl_fail
-freenode.autoconnect = off
-freenode.autoreconnect
-freenode.autoreconnect_delay
-freenode.nicks = "CoelacanthusHex,Coelacanthus,CoelacanthusHEX,C10sHex"
-freenode.nicks_alternate
-freenode.username
-freenode.realname
-freenode.local_hostname
-freenode.usermode
-freenode.command
-freenode.command_delay
-freenode.autojoin = "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#debian-cn,#gentoo-cn,#opensuse-cn"
-freenode.autorejoin
-freenode.autorejoin_delay
-freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
-freenode.away_check
-freenode.away_check_max_nicks
-freenode.msg_kick
-freenode.msg_part
-freenode.msg_quit
-freenode.notify
-freenode.split_msg_max_length
-freenode.charset_message
-freenode.default_chantypes
 libera.addresses = "irc.libera.chat/7000"
 libera.proxy
 libera.ipv6
@@ -235,7 +195,7 @@ libera.local_hostname
 libera.usermode
 libera.command
 libera.command_delay
-libera.autojoin = "#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,##foi"
+libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh"
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
