git: change email to coelacanthus@outlook.com

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-	email = CoelacanthusHex@gmail.com
+	email = coelacanthus@outlook.com
 	name = Coelacanthus
 	signingkey = E35C89E45867AE35
 
