--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -59,3 +59,6 @@
 	date = iso-local
 [format]
 	pretty = fuller
+
+[includeIf "gitdir:~/Data/workspace/aosc/**"]
+    path = ~/.config/git/aosc.config
