--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -16,3 +16,11 @@
 
 [core]
     pager = diff-so-fancy | less --tabs=4 -RFX
+    # enable escape for code large than 0x80
+    quotePath = false
+
+# log format: ISO8601 date format and show both Author and Committer
+[log]
+    date = iso-local
+[format]
+    pretty = fuller
